<resources>
    <string name="dots" translatable="false">…</string>
    <string name="app_name" translatable="false">NLL Store</string>

    <string name="ongoing_installation">Please wait ongoing installation to finish</string>
    <string name="app_icon">App icon</string>
    <string name="internet_conn_required">Internet connection required</string>
    <string name="install">Install</string>
    <string name="error_placeholder">Error: %1$s</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown error</string>
    <string name="open">Open</string>
    <string name="update">Update</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Downloaded</string>
    <string name="permission_denied">Permission denied</string>
    <string name="install_permission_request">Please grant app install permission</string>
    <string name="install_permission_granted">Tap on install to continue installation</string>
    <string name="installing">Installing</string>
    <string name="download_manually">Download failed! Try downloading manually and then use menu above to install again</string>
    <string name="download">Download</string>
    <string name="no_url_handle">Cannot find any app to open this link</string>
    <string name="back">Back</string>
    <string name="malformed_file">Malformed file</string>
    <string name="server_error">Server error (%1$s)</string>
    <string name="install_error">Installation failed!</string>
    <string name="ok">OK</string>
    <string name="install_error_aborted">The operation failed because it was actively aborted. For example, the user actively declined requested permissions, or the session was abandoned</string>
    <string name="install_error_blocked">The operation failed because it was blocked. For example, a device policy may be blocking the operation, a package verifier may have blocked the operation, or the app may be required for core system operation</string>
    <string name="install_error_conflict">The operation failed because it conflicts (or is inconsistent with) with another package already installed on the device. For example, an existing permission, incompatible certificates, etc. The user may be able to uninstall another app to fix the issue</string>
    <string name="install_error_incompatible">The operation failed because it is fundamentally incompatible with this device. For example, the app may require a hardware feature that doesn\'t exist, it may be missing native code for the ABIs supported by the device, or it requires a newer SDK version, etc.</string>
    <string name="install_error_invalid">The operation failed because one or more of the APKs was invalid. For example, they might be malformed, corrupt, incorrectly signed, mismatched, etc.</string>
    <string name="install_error_storage">The operation failed because of storage issues. For example, the device may be running low on space, or external media may be unavailable. The user may be able to help free space or insert different external media</string>
    <string name="install_error_unknown_or_user_cancelled">Installation cancelled</string>
    <string name="debug_log">Debug log</string>
    <string name="debug_log_dumped">Debug logs dumped to %1$s</string>
    <string name="share">Share</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>
    <string name="send">Send</string>
    <string name="crash_notif_title">NLL Store has crashed</string>
    <string name="crash_dialog_text">There was an error causing NLL Store to crash and stop.\nPlease help us fix this by sending us error data, all you have to is tap \'OK\' and send this report by email.</string>
    <string name="permission_all_required">All permissions are required for full functionality</string>
    <string name="permissions_title">Permission Request</string>
    <string name="cancel">Cancel</string>
    <string name="app_crash_notification_channel">Crash notification</string>
    <string name="notification_permission_required">Notification permission is required</string>
    <string name="update_found">New updates found</string>
    <string name="unable_to_open_file">Unable to open this file. Please try again</string>
    <string name="install_success">Installation completed</string>
    <string name="install_blocked_by_admin">Install blocked by device admin</string>
</resources>