<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationContentDescription="@string/back"
            app:navigationIcon="@drawable/ic_arrow_back_24"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/app_list_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/installVersionNotes"
            style="?textAppearanceBody2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/app_list_padding"

            android:autoLink="all"
            app:layout_constraintBottom_toTopOf="@+id/downloadProgressHolder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Version notes..." />

        <LinearLayout
            android:id="@+id/downloadProgressHolder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/app_list_padding"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/installDownloadedAppButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/downloadProgressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text="@string/downloading" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_list_padding">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/downloadedBytes"
                    style="?textAppearanceCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:text="@string/dots" />

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/downloadProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/app_list_padding"
                    android:layout_marginEnd="@dimen/app_list_padding"
                    android:layout_toStartOf="@+id/totalBytes"
                    android:layout_toEndOf="@+id/downloadedBytes"
                    android:max="100"
                    app:trackCornerRadius="3dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/totalBytes"
                    style="?textAppearanceCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:text="@string/dots" />
            </RelativeLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/installDownloadedAppButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/install"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>